# VulkanRenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
cmake/: Config.cmake  FindVulkan.cmake  Functions.cmake  Shaders.cmake
editor/: CMakeLists.txt
editor/Editor/: EditorApplication.cpp  EditorApplication.h  main.cpp
libraries/: CMakeLists.txt
libraries/Engine/: CMakeLists.txt
libraries/Engine/Engine/: CMakeLists.txt
libraries/Engine/Engine/Application/: Application.cpp  Application.h  Window.cpp  Window.h
libraries/Engine/Engine/Core/: Application.cpp
libraries/Engine/Engine/Device/: Device.cpp  Device.h
libraries/Engine/Engine/Graphics/: CMakeLists.txt  GraphicsInterface.cpp  GraphicsInterface.h  GraphicsManager.cpp  GraphicsManager.h  Swapchain.cpp  Swapchain.h
libraries/Engine/Engine/Graphics/Base/: CmakeLists.txt  ImGuiBase.cpp  ImGuiBase.h  TextureBase.h  WindowBase.cpp  WindowBase.h
libraries/Engine/Engine/Graphics/Device/: CMakeLists.txt  Device.cpp  Device.h  Surface.cpp  Surface.h
libraries/Engine/Engine/Graphics/Interfaces/: CMakeLists.txt  IWindow.h
libraries/Engine/Engine/Graphics/Renderer/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h
libraries/Engine/Engine/Graphics/Shaders/: CMakeLists.txt  Shader.cpp  Shader.h
libraries/Engine/Engine/Graphics/Textures/: CMakeLists.txt
libraries/Engine/Engine/Graphics/Utility/: CMakeLists.txt  VulkanImGuiContext.cpp  VulkanImGuiContext.h
libraries/Engine/Engine/Graphics/Windows/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h  GLFWWindowImpl.cpp  GLFWWindowImpl.h
libraries/Engine/Engine/Utility/: ImGuiManager.cpp  ImGuiManager.h
libraries/VulkanGL/: CMakeLists.txt
libraries/VulkanRendering/: CMakeLists.txt
resources/shaders/: CompileShaders.bat
